# rocket_auth

./: Cargo.toml
migrations/: 20220731220121_users.sql
src/: db_helper.rs  main.rs  signup.rs
templates/: base.html.tera  index.html.tera  nav.html.tera  signup.html.tera
